--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -38,29 +38,7 @@
 .search__btn {
   position: relative;
   transition: all 0.2s ease;
-  // padding: 1rem;
-
-  // &::before {
-  //   content: '';
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   background-color: #121212;
-  //   height: 100%;
-  //   width: 20%;
-  //   border-radius: 100%;
-  //   transform: scaleX(0);
-  //   transform-origin: left;
-  //   transition: all 0.2s ease;
-  // }
-  // &:hover::before {
-  //   transform: scaleX(1);
-  //   transform-origin: left;
-  // }
-  &:hover {
-    // border: 2px solid #ba08ca;
-    box-shadow: inset 0 0 2px 2px #12044e;
-  }
+  background: $color-primary;
 }
 
 .btn--small {
