--- a/src/sass/_preview.scss
+++ b/src/sass/_preview.scss
@@ -121,6 +121,10 @@
     gap: 1rem;
     justify-content: space-between;
 
+    @media only screen and (max-width: $bp-small) {
+      grid-template-columns: 1fr 1fr;
+    }
+
     & > * {
       font-size: 1.6rem;
       background-color: #e2e2e2;
