fixed minor issues

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,6 @@
 @import "header";
 @import "preview";
 @import "searchResults";
-@import "recipe";
+@import "cabin";
 @import "upload";
 @import "cabins";
