--- a/src/sass/_cabin.scss
+++ b/src/sass/_cabin.scss
@@ -114,13 +114,20 @@
     width: 4rem;
     border-radius: 10rem;
 
+    margin-right: auto;
     margin-left: auto;
-    margin-right: 1.75rem;
+    // margin-right: 1.75rem;
 
     svg {
-      height: 2.25rem;
-      width: 2.25rem;
+      height: 3.25rem;
+      width: 3.25rem;
       fill: $color-primary;
+    }
+
+    .btn--star {
+      border: none;
+      background: none;
+      cursor: pointer;
     }
   }
 
